--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A twitter client for keeping up with friends",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
     "server": "nodemon app.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",    
+    "start": "npm run dev"
+    
   },
   "keywords": [
     "Twitter",
