--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A twitter client for keeping up with friends",
   "main": "app.js",
   "scripts": {
-    "server": "nodemon app.js",
+    "server": "node app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",    
     "start": "npm run dev"
